--- a/backend-react-demo/package.json
+++ b/backend-react-demo/package.json
@@ -3,9 +3,23 @@
   "version": "1.0.0",
   "description": "Backend React Demo",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Welcome to Backend Demo!\""
+    "test": "echo \"Welcome to Backend Demo!\"",
+    "dev":  "tsx src/server.ts"
   },
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.6",
+    "@types/node": "^25.2.0",
+    "typescript": "^5.9.3"
+  },
+  "dependencies": {
+    "cors": "^2.8.6",
+    "express": "^5.2.1",
+    "nodemon": "^3.1.11",
+    "tsx": "^4.21.0"
+  }
 }
