--- a/shared-types/package.json
+++ b/shared-types/package.json
@@ -2,8 +2,10 @@
   "name": "shared-types",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "type": "module",
   "scripts": {
+    "enroll": "npm install && npm run build",
+    "build": "npx tsc",
     "test": "echo \"Hello, World!\""
   },
   "author": "",
