adj: package.json to have entry for lib dependency

--- a/shared-types/package.json
+++ b/shared-types/package.json
@@ -8,6 +8,12 @@
     "build": "npx tsc",
     "test": "echo \"Hello, World!\""
   },
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "main": "./dist/index.js"
+    }
+  },
   "author": "",
   "license": "MIT",
   "dependencies": {
