--- a/backend-react-demo/package.json
+++ b/backend-react-demo/package.json
@@ -6,20 +6,25 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Welcome to Backend Demo!\"",
-    "dev":  "tsx --watch src/server.ts"
+    "dev": "tsx --watch src/server.ts"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.2.0",
     "typescript": "^5.9.3"
   },
   "dependencies": {
-    "shared-types": "file:../shared-types",
+    "bcryptjs": "^3.0.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.6",
     "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3",
     "nodemon": "^3.1.11",
     "tsx": "^4.21.0"
   }
