adj: logic for Authentication

--- a/backend-react-demo/Config/backend/api-config.json
+++ b/backend-react-demo/Config/backend/api-config.json
@@ -24,5 +24,11 @@
     },
     "demoSettings": {
         "useMockData": true
+    },
+    "cookieSettings": {
+        "httpOnly": true,
+        "secure": false,
+        "sameSite": "lax",
+        "path": "/"
     }
 }
